# cldfzenodo

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/cldfzenodo/: __init__.py  api.py  oai.py  record.py  search.py  util.py
src/cldfzenodo/commands/: download.py  upload.py
tests/: conftest.py  dcat_record.xml  dcat_record_multifile.xml  oai.xml  search.json  test_api.py  test_cli.py  test_integration.py  test_legacy.py  test_oai.py  test_record.py  test_search.py
tests/fixtures/: communities.json  record.json  record_multifile.json  record_with_external_doi.json  search_keyword.json
