[metadata]
name = cldfzenodo
version = 1.0.1.dev0
author = Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = Functionality to retrieve CLDF datasets deposited on Zenodo
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics
license = Apache 2.0
license_files = LICENSE
url = https://github.com/cldf/cldfzenodo
project_urls =
    Bug Tracker = https://github.com/cldf/cldfzenodo/issues
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    clldutils>=3.15.1
    pycldf>=1.30.0
    html5lib
    nameparser
    attrs

[options.packages.find]
where = src

[options.entry_points]
cldfbench.commands =
    zenodo = cldfzenodo.commands
pycldf_dataset_resolver =
    zenodo = cldfzenodo.record:ZenodoResolver

[options.extras_require]
cli =
    cldfbench
dev =
    flake8
    wheel
    build
    twine
test =
    cldfbench
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    cldfzenodo
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py37, py38, py39, py310, py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
